# shred

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
deploy/: Caddyfile.example  nginx.conf.example  shred.service
scripts/: wipe.sh
shred/: __init__.py  cleanup.py  config.py  counters.py  db.py  security.py  storage.py
shred/routes/: __init__.py  admin.py  files.py  pages.py
shred/static/: admin.js  crypto.js  download-sw.js  script.js  status.js  style.css  words.json  zip.js
shred/templates/: admin.html  expired.html  group.html  index.html  status.html  terms.html  view.html
tests/: conftest.py  test_api.py
