[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shred"
version = "1.0.0"
description = "Zero-knowledge ephemeral file-sharing service."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "btea.dev" }]
keywords = ["encryption", "file-sharing", "ephemeral", "zero-knowledge", "flask"]
classifiers = [
    "Framework :: Flask",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "Flask==3.1.3",
    "gunicorn==23.0.0",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/itsbt125/shred"
Repository = "https://github.com/itsbt125/shred"

[tool.setuptools]
packages = ["shred", "shred.routes"]

[tool.setuptools.package-data]
shred = ["templates/**", "static/**"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM105"]

[tool.ruff.lint.per-file-ignores]
# config reads the environment at import time, so the test env must be set up
# before `import shred` — the imports cannot move to the top of the file.
"tests/conftest.py" = ["E402", "I001"]